# ayon-version-control

./: README.md  create_package.py  mkdocs.yml  package.py  pyproject.toml
0.1.0/: 404.html  index.html  license.html  objects.inv
0.1.0/autoapi/: summary.html
0.1.0/autoapi/client/version_control/: addon.html  index.html  lib.html  version.html
0.1.0/autoapi/client/version_control/backends/: abstract.html  index.html  undefined.html
0.1.0/autoapi/client/version_control/backends/perforce/: backend.html  (+3 more)
0.1.0/autoapi/client/version_control/changes_viewer/: abstract.html  control.html  index.html  model.html  widgets.html  window.html
0.1.0/autoapi/client/version_control/launch_hooks/: index.html
0.1.0/autoapi/client/version_control/perforce_triggers/: change_submit_trigger.html  index.html
0.1.0/autoapi/client/version_control/plugins/: index.html
0.1.0/autoapi/client/version_control/rest/: communication_server.html  index.html
0.1.0/autoapi/server/: index.html
0.1.0/autoapi/server/settings/: index.html  main.html
0.1.0/search/: search_index.js  search_index.json
client/: pyproject.toml
client/ayon_perforce/: __init__.py  addon.py  lib.py  version.py
client/ayon_perforce/backend/: __init__.py  backend.py  communication_server.py  rest_api.py  rest_routes.py  rest_stub.py
client/ayon_perforce/backend/api/: __init__.py
client/ayon_perforce/backends/: __init__.py  abstract.py
client/ayon_perforce/backends/perforce/: __init__.py  rest_routes.py
client/ayon_perforce/changes_viewer/: README.md  abstract.py  control.py  model.py  widgets.py  window.py
client/ayon_perforce/launch_hooks/: pre_load_sync_project.py
client/ayon_perforce/plugins/create/unreal/: changelist_metadata.py
client/ayon_perforce/plugins/publish/: collect_latest_changelist.py  collect_perforce_control.py  collect_perforce_login.py  collect_version_control.py  collect_version_control_login.py  extract_change_list_info.py  integrate_perforce.py  validate_stream.py  validate_workspace.py
client/ayon_perforce/plugins/publish/help/: validate_workspace.xml
client/ayon_perforce/rest/: communication_server.py  rest_api.py  rest_stub.py
client/ayon_perforce/rest/perforce/: rest_api.py  rest_stub.py
client/ayon_perforce/tray/: login.py  login_dialog.py
client/version_control/: __init__.py  addon.py  lib.py  version.py  version_control_module.py  widgets.py
client/version_control/backends/: __init__.py  abstract.py
client/version_control/backends/perforce/: __init__.py  backend.py  communication_server.py  convert_to_py2_annotations.py  rest_api.py  rest_routes.py
client/version_control/backends/perforce/api/: __init__.py  __init__.pyi  rest_stub.py
client/version_control/changes_viewer/: README.md  __init__.py  abstract.py  control.py  model.py  widgets.py  window.py
client/version_control/launch_hooks/perforce/: pre_load_sync_project.py
client/version_control/perforce_triggers/: README.md  change_submit_trigger.py
client/version_control/plugins/create/unreal/: changelist_metadata.py  publish_commit.py
client/version_control/plugins/publish/: collect_latest_changelist.py  collect_latest_changelist_id.py  collect_version_control.py  collect_version_control_login.py  extract_change_list_info.py  integrate_perforce.py  validate_stream.py  validate_workspace.py
client/version_control/plugins/publish/help/: validate_workspace.xml
client/version_control/rest/: communication_server.py
client/version_control/rest/perforce/: rest_api.py  rest_stub.py
server/: __init__.py
server/settings/: __init__.py  main.py
(+20 files in other folders)
